--- a/app/import/import.component.html
+++ b/app/import/import.component.html
@@ -28,7 +28,7 @@
                 </StackLayout>
 
                 <Switch class="m-15 toggle-switch" checked="true" (checkedChange)="onChecked($event)"></Switch>
-                <TextField class="input" [hint]="hint" [(ngModel)]='input'></TextField>
+                <TextField class="input" [hint]="hint" [(ngModel)]="input" (returnPress)="formatAddress()"></TextField>
             </StackLayout>
             <StackLayout orientation="vertical">
                 <Button *ngIf="active == true" class="btn btn-primary btn-active action-button fa" text="Next &#xf18e;" (tap)="onTapNext($event)"></Button>
