--- a/app/tabs/balance/balance.component.html
+++ b/app/tabs/balance/balance.component.html
@@ -7,7 +7,7 @@
                 <StackLayout class="hr-light"></StackLayout>
                 <Label class="font-weight-bold font-italic p-t-10 p-b-10" [text]="balance"></Label>
                 <StackLayout class="hr-light"></StackLayout>
-                <GridLayout class="p-t-10 p-b-10" columns="150,auto,150" rows="auto">
+                <GridLayout class="p-t-10 p-b-10" columns="*,auto,*" rows="auto">
                     <Label col="0" class="font-weight-bold font-italic  m-r-10 text-right" [text]="balanceBTC"></Label>
                     <Label col="1" class="fa p-t-2" text="&#xf0ec;"></Label>
                     <Label col="2" class="font-weight-bold font-italic m-l-10 text-left" [text]="balanceCur"></Label>
