--- a/app/app.scss
+++ b/app/app.scss
@@ -127,6 +127,60 @@ Page {
         }
     }
 
+    .modal-container {
+        vertical-align: middle;
+
+        .body-container {
+            background-color: $background-light;
+            text-align: center;
+            border-radius: $default-border;
+            width: 100%;
+            padding: 30;
+
+            .solo {
+                margin: 30px;
+            }
+
+            .top {
+                margin: 30px 30px 0px 30px;
+            }
+
+            .middle {
+                margin: 0px 30px 0px 30px;
+            }
+
+            .bottom {
+                margin: 0px 30px 30px 30px;
+            }
+        }
+
+        .info-container {
+            background-color: $background-dark;
+            color: $background-light;
+            border-color: $default-border-color;
+            border-width: 1;
+            border-radius: $default-border;
+            text-align: center;
+            width: 80%;
+
+            .solo {
+                margin: 30px;
+            }
+
+            .top {
+                margin: 30px 30px 0px 30px;
+            }
+
+            .middle {
+                margin: 0px 30px 0px 30px;
+            }
+
+            .bottom {
+                margin: 0px 30px 30px 30px;
+            }
+        }
+    }
+
     .page-placeholder {
         color: $page-icon-color;
         font-size: $page-content-placeholder-font-size;
