--- a/app/tabs/tabs.component.html
+++ b/app/tabs/tabs.component.html
@@ -18,7 +18,7 @@
             <accounts></accounts>
         </StackLayout>
         <StackLayout class="tab" *tabItem="{title: 'Settings', iconSource: getIconSource('gears')}">
-
+            <settings></settings>
         </StackLayout>
     </TabView>
 </Page>
