--- a/app/tabs/settings/about/about.component.html
+++ b/app/tabs/settings/about/about.component.html
@@ -4,6 +4,10 @@
             <StackLayout class="body-container">
                 <Image class="logo-small" src="res://logo"></Image>
                 <Label class="solo fa" textWrap="true" text="Developed by"></Label>
+                <Label class="solo fa" textWrap="true" text="Feedback, Bugs, Help?"></Label>
+                <Button class="btn btn-primary btn-active about-button fa" text="&#xf09b; Documentation" (tap)="onTapOk($event)"></Button>
+                <Label class="solo fa" textWrap="true" text="Follow us on twitter to get updates on our projects!"></Label>
+                <Button class="btn btn-primary btn-active about-button fa" text="&#xf099; PoC Consortium" (tap)="onTapOk($event)"></Button>
             </StackLayout>
         </StackLayout>
     <StackLayout>
