--- a/app/tabs/settings/settings.component.scss
+++ b/app/tabs/settings/settings.component.scss
@@ -2,7 +2,7 @@
 
 .settings-item {
     background-color: $background-light;
-    margin: 10;
+    margin: 20;
     border-radius: $default-border;
 }
 
@@ -10,5 +10,6 @@
     text-transform:none;
     font-size: 14;
     height: $btn-height;
-    margin: 2;
+    margin: 10;
+    width: 90%;
 }
