--- a/app/tabs/balance/send/send.component.html
+++ b/app/tabs/balance/send/send.component.html
@@ -11,7 +11,7 @@
         <Image class="logo-small" src="res://logo"></Image>
 
         <StackLayout *ngIf="this.step == 1">
-            <StackLayout style="width: 90%" class="body-container" orientation="vertical">
+            <StackLayout class="body-container" orientation="vertical">
                 <Label class="font-italic p-b-15 huge-label" [text]="'Balance: ' + balance"></Label>
                 <StackLayout class="hr-light"></StackLayout>
                 <GridLayout class="text-left m-t-10" columns="*9, *2" rows="auto, auto">
@@ -20,12 +20,13 @@
                     <Button col="1" row="0" rowspan="2" class="scan-button btn btn-primary btn-active fa text-center" text="&#xf083;" (tap)=onTapScan($event)></Button>
                 </GridLayout>
                 <StackLayout class="hr-light m-t-10 m-b-10"></StackLayout>
-                <GridLayout class="text-left m-b-10" columns="*2, *3, *" rows="auto, auto">
+                <GridLayout class="text-left m-b-10" columns="100, auto, 70, *" rows="auto, auto">
                     <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0d6; Amount"></Label>
+                    <TextField col="0" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="amount" (ngModelChange)="verifyInputs('amount')"></TextField>
                     <Label col="2" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0ec; Fee"></Label>
-                    <TextField col="0" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="amount"></TextField>
-                    <Label col="1" row="1" rowspan="2" class="p-5 p-r-15 fa text-center" [text]="'= ' + marketService.getPriceFiatCurrency(amount)"></Label>
-                    <TextField col="2" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="fee"></TextField>
+                    <TextField col="2" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="fee" (ngModelChange)="verifyInputs('fee')"></TextField>
+                    <Label col="1" row="1" rowspan="2" class="p-10 fa text-center" text="+"></Label>
+                    <Label col="3" row="1" rowspan="2" class="p-5 fa text-center" [text]="'= ' + marketService.getPriceFiatCurrency(total)"></Label>
                 </GridLayout>
                 <StackLayout class="hr-light"></StackLayout>
             </StackLayout>
@@ -48,7 +49,7 @@
                     <Label col="0" row="2" class="p-t-5 p-b-5 fa" text="&#xf0ec; Fee:"></Label>
                     <Label col="1" row="2" class="p-t-5 p-b-5 p-l-5 fa" [text]="fee"></Label>
 
-                    <Label col="2" row="1" rowspan="2" style="vertical-align:middle" class="p-5 p-l-15" [text]="'= ' + marketService.getPriceFiatCurrency(amount + fee)"></Label>
+                    <Label col="2" row="1" rowspan="2" style="vertical-align:middle" class="p-5 p-l-15" [text]="'= ' + marketService.getPriceFiatCurrency(total)"></Label>
                 </GridLayout>
                 <StackLayout class="hr-light"></StackLayout>
             </StackLayout>
