refresh fix for list views

--- a/app/tabs/accounts/accounts.component.html
+++ b/app/tabs/accounts/accounts.component.html
@@ -1,10 +1,10 @@
-<StackLayout orientation="vertical">
+<AccountsRefresh (refresh)="refresh($event)">
     <ListView [items]="wallets" (itemTap)="onItemTap($event)" separatorColor="transparent">
         <ng-template let-item="item" let-i="index">
             <StackLayout>
                 <GridLayout class="m-x-auto list-item" columns="auto,*,auto" rows="auto, auto, auto">
-                    <Label col="0" row="0" class="font-weight-bold font-italic" [text]="item.address"></Label>
-                    <Label col="2" row="0" class="font-weight-bold font-italic text-right" [text]="item.balance + ' BURST'"></Label>
+                    <Label col="0" row="0" class="font-weight-bold" [text]="item.address"></Label>
+                    <Label col="2" row="0" class="font-weight-bold text-right" [text]="item.balance + ' BURST'"></Label>
                     <Label col="0" row="1" class="" [text]="item.id"></Label>
                     <Label col="2" row="1" class=" text-right" [text]="item.balanceStringBTC"></Label>
                     <Label col="0" row="2" class="" [text]="item.type"></Label>
@@ -13,4 +13,4 @@
             </StackLayout>
         </ng-template>
     </ListView>
-</StackLayout>
+</AccountsRefresh>
