--- a/app/tabs/tabs.component.html
+++ b/app/tabs/tabs.component.html
@@ -3,7 +3,7 @@
         <GridLayout columns="auto, 200, *, auto" rows="auto">
             <Image col="0" class="logo-tiny m-r-15" src="res://logo"></Image>
             <Label col="1" class="action-bar-title" [text]="title"></Label>
-            <Button *ngIf="selectedIndex == 2" col="3" class="btn btn-primary btn-active action-bar-button fa text-center" text="&#xf067;" [nsRouterLink]="['/tabs/accounts/add']"></Button>
+            <Button *ngIf="selectedIndex == 2" col="3" class="btn btn-primary btn-active action-bar-button fa text-center" text="&#xf067;" (tap)="onTapAddAccount()"></Button>
         </GridLayout>
     </ActionBar>
 
