--- a/app/tabs/transactions/transactions.component.scss
+++ b/app/tabs/transactions/transactions.component.scss
@@ -6,7 +6,7 @@
     border-color: $sky;
     border-width: 3px;
     border-radius: 10px;
-    width: 100px;
+    width: 70;
     text-align: center;
     vertical-align: middle;
 }
@@ -17,7 +17,7 @@
     border-color: $success-light;
     border-width: 3px;
     border-radius: 10px;
-    width: 100px;
+    width: 70;
     text-align: center;
     vertical-align: middle;
 }
