--- a/app/tabs/settings/about/about.component.html
+++ b/app/tabs/settings/about/about.component.html
@@ -10,5 +10,5 @@
                 <Button class="btn btn-primary btn-active about-button fa" text="&#xf099; PoC Consortium" (tap)="onTapOk($event)"></Button>
             </StackLayout>
         </StackLayout>
-    <StackLayout>
+    </StackLayout>
 </StackLayout>
