--- a/app/tabs/settings/currency/currency.component.html
+++ b/app/tabs/settings/currency/currency.component.html
@@ -8,5 +8,5 @@
                 <Button class="btn btn-primary btn-active action-button fa" text="&#xf05d;" (tap)="onTapOk($event)"></Button>
             </StackLayout>
         </StackLayout>
-    <StackLayout>
+    </StackLayout>
 </StackLayout>
