--- a/app/tabs/balance/balance.component.html
+++ b/app/tabs/balance/balance.component.html
@@ -1,6 +1,6 @@
 <BalanceRefresh (refresh)="refresh($event)">
     <StackLayout orientation="vertical">
-        <StackLayout class="balance-container m-b-30" orientation="vertical">
+        <StackLayout class="balance-container" orientation="vertical">
                 <Image class="qrcode" [src]="qrcode"></Image>
                 <StackLayout class="hr-light"></StackLayout>
                 <Label class="font-weight-bold p-t-10 p-b-10" [text]="address"></Label>
