--- a/app/tabs/settings/node/node.component.html
+++ b/app/tabs/settings/node/node.component.html
@@ -16,5 +16,5 @@
                 <Button class="btn btn-primary btn-active action-button fa" text="&#xf05d;" (tap)="onTapOk($event)"></Button>
             </StackLayout>
         </StackLayout>
-    <StackLayout>
+    </StackLayout>
 </StackLayout>
