--- a/app/tabs/balance/balance.component.scss
+++ b/app/tabs/balance/balance.component.scss
@@ -15,3 +15,11 @@
     height: 400px;
     border-radius: 20px;
 }
+
+.positive {
+    color: $success-light;
+}
+
+.negative {
+    color: $error-light;
+}
