--- a/app/tabs/transactions/transactions.component.scss
+++ b/app/tabs/transactions/transactions.component.scss
@@ -1,6 +1,18 @@
 @import '../../app-variables';
 
-.transaction-label {
+.transaction-label-in {
+    font-size: 16px;
+    color: $background-dark;
+    background-color: $background-light;
+    border-width: 2px;
+    border-radius: $default-border;
+    border-color: $background-dark;
+    width: 70;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.transaction-label-out {
     font-size: 16px;
     color: $background-light;
     background-color: $background-dark;
