--- a/app/create/create.component.scss
+++ b/app/create/create.component.scss
@@ -18,7 +18,7 @@
     vertical-align: middle;
     text-align:center;
     width: 100%;
-    height: 60%;
+    height: 270;
 }
 
 .chip {
@@ -34,14 +34,14 @@
 }
 
 .possibilities {
-    width: 90%;
+    width: 100%;
     margin-left: 20px;
     height: 200px;
     text-align: center;
 }
 
 .possibility-button {
-    margin: 10px;
+    margin: 5px;
     text-transform: lowercase;
     height: 150px;
 }
