--- a/app/tabs/balance/balance.component.html
+++ b/app/tabs/balance/balance.component.html
@@ -13,9 +13,9 @@
                 <Label *ngIf="!confirmed" class="font-weight-bold p-t-10 p-b-10 fa" [text]="'Balance: ' + balance + ' &#xf021;'"></Label>
                 <StackLayout class="hr-light"></StackLayout>
                 <GridLayout class="p-t-10 p-b-10" columns="*,auto,*" rows="auto">
-                    <Label col="0" class="font-weight-bold  m-r-10 text-right" [text]="balanceBTC"></Label>
+                    <Label col="0" class="font-weight-bold  m-r-10 text-right" [text]="marketService.getPriceBTC(wallet.balance)"></Label>
                     <Label col="1" class="fa p-t-2" text="&#xf0ec;"></Label>
-                    <Label col="2" class="font-weight-bold m-l-10 text-left" [text]="balanceCur"></Label>
+                    <Label col="2" class="font-weight-bold m-l-10 text-left" [text]="marketService.getPriceFiatCurrency(wallet.balance)"></Label>
                 </GridLayout>
         </StackLayout>
         <StackLayout orientation="vertical">
