hide progress bar on seed step, cgebe/burstcoin-wallet#3

--- a/app/app.scss
+++ b/app/app.scss
@@ -21,18 +21,18 @@ Page {
 }
 
 .logo-tiny {
-    height: 100px;
-    width: 100px;
+    height: 40;
+    width: 40;
 }
 
 .logo-small {
-    height: 300px;
-    width: 300px;
+    height: 100;
+    width: 100;
 }
 
 .logo-normal {
-    height: 500px;
-    width: 500px;
+    height: 170;
+    width: 170;
 }
 
 .btn-primary {
