--- a/app/start/start.component.html
+++ b/app/start/start.component.html
@@ -10,7 +10,7 @@
 
         <Image class="logo-normal m-b-30 m-t-10" src="res://logo"></Image>
 
-        <StackLayout *ngIf="this.loading" style="margin-bottom: 300px;" orientation="vertical">
+        <StackLayout *ngIf="this.loading" style="margin-bottom: 100;" orientation="vertical">
             <ActivityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
         </StackLayout>
 
