--- a/app/tabs/balance/balance.component.scss
+++ b/app/tabs/balance/balance.component.scss
@@ -2,18 +2,18 @@
 
 .balance-container {
     background-color: $background-light;
-    padding: 10px;
-    margin-top: 100px;
+    padding: 3;
+    margin-top: 33;
     text-align: center;
     border-radius: $default-border;
     width: 80%;
 }
 
 .qrcode {
-    margin: 25px;
-    width: 400px;
-    height: 400px;
-    border-radius: 20px;
+    margin: 8;
+    width: 180;
+    height: 180;
+    border-radius: 8;
 }
 
 .positive {
