--- a/app/tabs/balance/send/send.component.scss
+++ b/app/tabs/balance/send/send.component.scss
@@ -4,11 +4,11 @@
 
 
 .big-label {
-    font-size: 18px;
+    font-size: 18;
 }
 
 .huge-label {
-    font-size: 24px;
+    font-size: 24;
 }
 
 .recipient-input {
