--- a/app/app.scss
+++ b/app/app.scss
@@ -23,16 +23,22 @@ Page {
 .logo-tiny {
     height: 40;
     width: 40;
+    background: transparent;
+    background-color: transparent;
 }
 
 .logo-small {
     height: 100;
     width: 100;
+    background: transparent;
+    background-color: transparent;
 }
 
 .logo-normal {
     height: 170;
     width: 170;
+    background: transparent;
+    background-color: transparent;
 }
 
 .btn-primary {
@@ -56,8 +62,8 @@ Page {
 
 .list-item {
     background-color: $background-light;
-    margin: 30px 20px 0px 20px;
-    padding: 30px 30px 30px 30px;
+    margin: 10 7 0 7;
+    padding: 10;
     border-radius: $default-border;
 }
 
@@ -78,25 +84,25 @@ Page {
         .body-container {
             background-color: $background-light;
             text-align: center;
-            margin-top: 20px;
+            margin-top: 7;
             border-radius: $default-border;
             width: 90%;
-            padding: 50px;
+            padding: 15;
 
             .solo {
-                margin: 30px;
+                margin: 10;
             }
 
             .top {
-                margin: 30px 30px 0px 30px;
+                margin: 10 10 0 10;
             }
 
             .middle {
-                margin: 0px 30px 0px 30px;
+                margin: 0 10 0 10;
             }
 
             .bottom {
-                margin: 0px 30px 30px 30px;
+                margin: 0 10 10 10;
             }
         }
 
@@ -110,19 +116,19 @@ Page {
             width: 80%;
 
             .solo {
-                margin: 30px;
+                margin: 10;
             }
 
             .top {
-                margin: 30px 30px 0px 30px;
+                margin: 10 10 0 10;
             }
 
             .middle {
-                margin: 0px 30px 0px 30px;
+                margin: 0 10 0 10;
             }
 
             .bottom {
-                margin: 0px 30px 30px 30px;
+                margin: 0 10 10 10;
             }
         }
     }
@@ -138,19 +144,19 @@ Page {
             padding: 30;
 
             .solo {
-                margin: 30px;
+                margin: 10;
             }
 
             .top {
-                margin: 30px 30px 0px 30px;
+                margin: 10 10 0 10;
             }
 
             .middle {
-                margin: 0px 30px 0px 30px;
+                margin: 0 10 0 10;
             }
 
             .bottom {
-                margin: 0px 30px 30px 30px;
+                margin: 0 10 10 10;
             }
         }
 
@@ -164,19 +170,19 @@ Page {
             width: 80%;
 
             .solo {
-                margin: 30px;
+                margin: 10;
             }
 
             .top {
-                margin: 30px 30px 0px 30px;
+                margin: 10 10 0 10;
             }
 
             .middle {
-                margin: 0px 30px 0px 30px;
+                margin: 0 10 0 10;
             }
 
             .bottom {
-                margin: 0px 30px 30px 30px;
+                margin: 0 10 10 10;
             }
         }
     }
