--- a/app/create/create.component.scss
+++ b/app/create/create.component.scss
@@ -1,7 +1,7 @@
 @import '../app-variables';
 
 .progress-bottom {
-    margin-top: 100px;
+    margin-top: 33;
     height: 20%;
 }
 
@@ -18,39 +18,39 @@
     vertical-align: middle;
     text-align:center;
     width: 100%;
-    height: 250;
+    height: 200;
 }
 
 .chip {
     display: inline-block;
-    padding: 0 25px;
-    margin: 50px 5px 30px 5px;
-    height: 100px;
+    padding: 0 8;
+    margin: 10 2 10 2;
+    height: 33;
     width: 50%;
-    font-size: 24px;
-    line-height: 25px;
-    border-radius: 20px;
+    font-size: 24;
+    line-height: 8;
+    border-radius: 7;
     background-color: $light-gray;
 }
 
 .possibilities {
     width: 100%;
-    margin-left: 20px;
-    height: 200px;
+    margin-left: 7;
+    height: 70;
     text-align: center;
 }
 
 .possibility-button {
-    margin: 5px;
+    margin: 2;
     text-transform: lowercase;
-    height: 150px;
+    height: $btn-height;
 }
 
 .generate-again-button {
-    margin: 50px 0px 0px 0px;
+    margin: 16 0 0 0;
     width: 60%;
 }
 
 .bottom-filler {
-    height: 150px;
+    height: 50;
 }
