remove accounts, #17, cgebe/burstcoin-wallet#2

--- a/app/tabs/accounts/accounts.component.html
+++ b/app/tabs/accounts/accounts.component.html
@@ -2,14 +2,20 @@
     <ListView [items]="wallets" (itemTap)="onItemTap($event)" separatorColor="transparent">
         <ng-template let-item="item" let-i="index">
             <StackLayout>
-                <GridLayout (tap)="selectWallet(item)" class="m-x-auto list-item" columns="auto,*,auto" rows="auto, auto, auto">
-                    <Label col="0" row="0" class="font-weight-bold p-b-5" [text]="item.address"></Label>
-                    <Label col="2" row="0" class="font-weight-bold text-right p-b-5" [text]="item.balance + ' BURST'"></Label>
-                    <Label col="0" row="1" class="p-b-5" [text]="item.id"></Label>
-                    <Label col="2" row="1" class="text-right p-b-5" [text]="marketService.getPriceBTC(item.balance)"></Label>
-                    <Label *ngIf="item.type == 'active'" col="0" row="2" class="p-b-5 p-t-5 fa" text="&#xf111;"></Label>
-                    <Label *ngIf="item.type != 'active'" col="0" row="2" class="p-b-5 p-t-5 fa" text="&#xf10c;"></Label>
-                    <Label col="2" row="2" class="text-right p-b-5" [text]="marketService.getPriceFiatCurrency(item.balance)"></Label>
+                <GridLayout (tap)="selectWallet(item)" class="list-item" columns="auto, auto, auto, auto *, auto" rows="auto, auto, auto, auto">
+                    <Label col="0" row="0" colspan="3" class="address" [text]="item.address"></Label>
+                    <Label *ngIf="item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf111;"></Label>
+                    <Label *ngIf="!item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf10c;"></Label>
+
+                    <Label col="0" row="1" colspan="3" rowspan="2" class="balance text-center" [text]="'Balance: ' + item.balance + ' BURST'"></Label>
+
+                    <Label *ngIf="item.type == 'active'" col="3" row="0" class="text-center fa active-indicator" text="&#xf00c;"></Label>
+                    <Label *ngIf="item.type == 'offline'" col="3" row="0" class="text-center fa active-indicator" text="&#xf05e;"></Label>
+                    <Label col="1" row="3" class="fa text-center p-t-2 p-l-5 p-r-5" text="&#xf0ec;"></Label>
+                    <Label col="0" row="3" class="text-right" [text]="marketService.getPriceBTC(item.balance)"></Label>
+                    <Label col="2" row="3" class="text-left" [text]="marketService.getPriceFiatCurrency(item.balance)"></Label>
+
+                    <Button col="5" row="2" rowspan="2" style="margin: 2" class="btn btn-primary btn-active icon-button fa text-center" text="&#xf00d;" (tap)="onTapRemoveAccount(item)"></Button>
                 </GridLayout>
                 <Button *ngIf="i == wallets.length - 1" class="btn btn-primary btn-active icon-button fa text-center" text="&#xf067;" (tap)="onTapAddAccount()"></Button>
             </StackLayout>
