--- a/app/tabs/accounts/accounts.component.scss
+++ b/app/tabs/accounts/accounts.component.scss
@@ -4,3 +4,26 @@
     width: 50;
     height: 50;
 }
+
+.address {
+    font-size: 16;
+}
+
+.balance {
+    font-size: 16;
+    vertical-align: middle;
+}
+
+.balance-small {
+    font-size: 10;
+}
+
+.active-indicator {
+    vertical-align: middle;
+    padding-left: 10;
+}
+
+.select-indicator {
+    vertical-align: top;
+    padding-top: 5;
+}
